# omg_dosimetry

./: .gitignore  .readthedocs.yml  CreateMultichannelLUT.py  DemoAnalysis.py  DemoCalibration_ReflexionLatCorr.py  DemoCalibration_TransmissionNoLatCorr.py  DemoTiff2Analysis_TransmissionNoLatCorr.py  DemoTiff2Dose_ReflexionLatCorr.py  LICENSE  OMG-env.yaml  OMG.yaml  OMG_Analysis.py  OMG_Calibration.py  OMG_Tiff2Analysis_Mifsud.py  OMG_Tiff2Analysis_QApatients.bak  OMG_Tiff2Analysis_QApatients_JMF.py  OMG_Tiff2Analysis_QApatients_Jo.py  OMG_Tiff2Analysis_QApatients_SBRT.py  OMG_Tiff2Analysis_QApatients_SRS2.py  OMG_Tiff2Analysis_QApatients_SRS_v1.py  OMG_Tiff2Analysis_QApatients_SRS_v2.py  OMG_Tiff2Dose.py  README.md  README.rst  analysis.py  analysis2.py  calibration.py  imageRGB.py  pyproject.toml  requirements.txt  requirements_pip.txt  requirements_read_the_docs.txt  test.py  tiff2dose.py  tiff2dose2.py
.github/workflows/: publish-to-test-pypi.yml
Core/: imageRGB.py
DemoReflexionLatCorr/Calibration/: ICProfiler 9MeV 25x25 1,9cm.txt
Development/: AnalyseChampsComplexes.py  Calibration_JF.py  Calibration_baseline.py  Convert_to_nominal_doses.py  DemoAnalysis_JF.py  DemoTiff2Dose_JF.py  ExtractCurvesFromMonacoDosePlan.py  ExtractPDD.py  ExtractPDD_auto.py  ExtractProfiles.py  Test_scale_0.py  Tiff2Dose_baseline.py  Tiff2Dose_convert.py  create_scanner_baseline.py  foo.py  merge_dcm_img.py  pylinac_examples.py  tect recal.py  testLoad16bitTiff.py  testLoadDicom.py  test_16bit.py  test_fit.py  test_gamma.py  test_mouse_hold.py  test_npgamma.py  test_rect.py
QA/: OMG_Tiff2Analysis_QApatients.py  OMG_Tiff2Analysis_QApatients_Quasar.py  OMG_Tiff2Analysis_QApatients_SRS_multi.py
Scripts JF/: ConvertMCC_cm-To-mm.py  ConvertTxtToMCC.py  ExtractPDD_auto.py  ExtractProfiles.py  Tiff2Dose_folder.py  analysis.old  analysis.py  tiff2dose.py
Scripts Julia/: CalibrationScript.py  ComputeDailyFactor.py  RS_script  Tiff2Analysis.py  Tiff2AnalysisHétéro.py  Tiff2AnalysisQAPatients.py  Tiff2Analysis_JMF.py  analysis.py  calibration.py  imageRGB.py  tiff2dose.py
Scripts/Tools/: Get_Profiles_SRS_multi.py
Tools/: Get_DoseSRS_multi.py
docs/source/: analysis.rst  calibration.rst  conf.py  index.rst  installation.rst  requirements.txt  tiff2dose.rst
scripts/analysis/: load_saved_analysis.py
scripts/calib/: omg_calibration_C14.py
scripts/demo/: omg_analysis_demo.py  omg_calibration_demo.py  omg_tiff2dose_demo.py
scripts/profiles/: ExtractProfiles.py  ExtractProfiles_auto.py
(+39 files in other folders)
