[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omg_dosimetry"
version = "1.4.0"
authors = [
  { name="JF Cabana", email="jean-francois.cabana.cisssca@ssss.gouv.qc.ca" },
]
description = "Optimized Multichannel Gafchromic Dosimetry (OMG Dosimetry)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pymedphys~=0.39",
  "pylinac~=3.7",
]

[project.urls]
"Homepage" = "https://bitbucket.org/cric_levis/omg-film-dosimetry"

[tool.hatch.build]
exclude = [
  "scripts/*",
]