[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omg_dosimetry"

version = "1.6.1"

authors = [
  { name="JF Cabana", email="jean-francois.cabana.cisssca@ssss.gouv.qc.ca" },
]
maintainers = [
  {name = "Luis Alfonso Olivares Jimenez", email = "alfonso.cucei.udg@gmail.com"}
]
description = "Optimized Multichannel Gafchromic Dosimetry (OMG Dosimetry)"
readme = "README.rst"
requires-python = ">=3.7, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pymedphys~=0.39",
  "pylinac~=3.7",
  "spyder~=5.3",
]

[project.urls]
homepage = "https://omg-dosimetry.readthedocs.io/en/latest/"
repository = "https://github.com/jfcabana/omg_dosimetry"
Bug-Tracker = "https://github.com/jfcabana/omg_dosimetry/issues"

[tool.hatch.build]
exclude = [
  "scripts/*",
]
